fixed some issues

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <!-- This is a solution to the [Interactive rating component challenge on Frontend Mentor]
             (https://www.frontendmentor.io/challenges/interactive-rating-component-koxpeBUmI). 
@@ -10,10 +10,10 @@
         <title>Review Us!</title>
     </head>
     <body>
-        <section class="container">
+        <main class="container">
             <div class="rating">
                 <div class="star">
-                    <img src="images/icon-star.svg">
+                    <img src="images/icon-star.svg" alt="star icon">
                 </div>
                 <div class="content">
                     <div class="question">
@@ -34,6 +34,7 @@
                     <button class="submit" type="submit">Submit</button>
                 </div>
             </div>
+            </div>
             <div class="result hidden">
                 <img src="images/illustration-thank-you.svg">
                 <p class="selected"></p>
@@ -44,7 +45,7 @@
                     get in touch!
                 </p>
             </div>
-        </section>
+        </main>
         <script src="script.js"></script>
     </body>
 </html>
