--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </div>
             </div>
             <div class="result hidden">
-                <img src="images/illustration-thank-you.svg">
+                <img src="images/illustration-thank-you.svg" alt="thank you">
                 <p class="selected"></p>
                 <h1>Thank you!</h1>
                 <p class="text">
